--- a/MediaBrowser.WebDashboard/dashboard-ui/userpassword.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userpassword.html
@@ -27,28 +27,23 @@
                         <div class="detailSection">
                             <div class="detailSectionContent">
                                 <div id="fldCurrentPassword" style="display: none;">
-                                    <label for="txtCurrentPassword">${LabelCurrentPassword}</label>
-                                    <input type="password" id="txtCurrentPassword" name="txtCurrentPassword" />
-                                    <br />
-                                </div>
-                                <div>
-                                    <label for="txtNewPassword">${LabelNewPassword}</label>
-                                    <input type="password" id="txtNewPassword" name="txtNewPassword" />
+                                    <paper-input type="password" id="txtCurrentPassword" label="${LabelCurrentPassword}" autocomplete="off"></paper-input>
                                 </div>
                                 <br />
                                 <div>
-                                    <label for="txtNewPasswordConfirm">${LabelNewPasswordConfirm}</label>
-                                    <input type="password" id="txtNewPasswordConfirm" name="txtNewPasswordConfirm" />
+                                    <paper-input type="password" id="txtNewPassword" label="${LabelNewPassword}" autocomplete="off"></paper-input>
                                 </div>
                                 <br />
                                 <div>
-                                    <button type="submit" data-theme="b" data-icon="check" data-mini="true">
-                                        ${ButtonSave}
+                                    <paper-input type="password" id="txtNewPasswordConfirm" label="${LabelNewPasswordConfirm}" autocomplete="off"></paper-input>
+                                </div>
+                                <br />
+                                <div>
+                                    <button type="submit" data-role="none" class="clearButton">
+                                        <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
                                     </button>
                                     <div id="btnResetPassword" style="display: none;">
-                                        <button type="button" data-icon="lock" onclick="UpdatePasswordPage.resetPassword();" data-mini="true">
-                                            ${ButtonResetPassword}
-                                        </button>
+                                        <paper-button raised class="cancel block" onclick="UpdatePasswordPage.resetPassword();"><iron-icon icon="lock"></iron-icon><span>${ButtonResetPassword}</span></paper-button>
                                     </div>
                                 </div>
                             </div>
@@ -65,23 +60,19 @@
                                 <div>${EasyPasswordHelp}</div>
                                 <br />
                                 <div>
-                                    <label for="txtEasyPassword">${LabelEasyPinCode}</label>
-                                    <input type="password" id="txtEasyPassword" />
+                                    <paper-input type="password" id="txtEasyPassword" label="${LabelEasyPinCode}" autocomplete="off"></paper-input>
                                 </div>
                                 <br />
                                 <div>
-                                    <label for="chkEnableLocalEasyPassword">${LabelInNetworkSignInWithEasyPassword}</label>
-                                    <input type="checkbox" id="chkEnableLocalEasyPassword" />
-                                    <div class="fieldDescription">${LabelInNetworkSignInWithEasyPasswordHelp}</div>
+                                    <paper-checkbox class="chkEnableLocalEasyPassword">${LabelInNetworkSignInWithEasyPassword}</paper-checkbox>
+                                    <div class="fieldDescription paperCheckboxFieldDescription">${LabelInNetworkSignInWithEasyPasswordHelp}</div>
                                 </div>
-                                <br />
+                                <br /><br />
                                 <div>
-                                    <button type="submit" data-theme="b" data-icon="check" data-mini="true">
-                                        ${ButtonSave}
+                                    <button type="submit" data-role="none" class="clearButton">
+                                        <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
                                     </button>
-                                    <button id="btnResetEasyPassword" style="display:none;" type="button" data-icon="lock" onclick="UpdatePasswordPage.resetEasyPassword();" data-mini="true">
-                                        ${ButtonResetEasyPassword}
-                                    </button>
+                                    <paper-button id="btnResetEasyPassword" style="display:none;" raised class="cancel block" onclick="UpdatePasswordPage.resetEasyPassword();"><iron-icon icon="lock"></iron-icon><span>${ButtonResetEasyPassword}</span></paper-button>
                                 </div>
                             </div>
                         </div>
