--- a/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-in.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-in.html
@@ -19,4 +19,6 @@
 <link rel="import" href="bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="bower_components/paper-input/paper-input.html">
 <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
+<link rel="import" href="bower_components/paper-item/paper-icon-item.html">
+<link rel="import" href="bower_components/paper-item/paper-item-body.html">
 <link rel="import" href="thirdparty/emby-icons.html">
