--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
@@ -5,24 +5,17 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="languagePreferencesPage" data-role="page" class="page libraryPage userPreferencesPage" data-contextname="${HeaderSettings}" data-require="scripts/mypreferenceslanguages,scripts/mypreferencescommon,paperbuttonstyle,jqmicons">
+    <div id="languagePreferencesPage" data-role="page" class="page libraryPage userPreferencesPage noSecondaryNavPage" data-title="${HeaderPlaybackSettings}" data-require="scripts/mypreferenceslanguages,paperbuttonstyle,jqmicons" data-backbutton="true" data-menubutton="false">
 
-        <div class="libraryViewNav">
-            <a href="#" class="lnkDisplayPreferences">${TabGeneral}</a>
-            <a href="#" class="lnkHomeScreenPreferences">${TabHomeScreen}</a>
-            <a href="#" class="ui-btn-active lnkLanguagePreferences">${TabPlayback}</a>
-            <a href="#" class="lnkMyProfile">${TabProfile}</a>
-        </div>
         <div data-role="content">
 
-            <br />
             <form style="margin: 0 auto;" class="languagePreferencesForm userProfileSettingsForm">
 
 
                 <div class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderLanguagePreferences}<span style="color:#52B54B;margin-left:.5em;">*</span>
-                    </div>
+                    </h1>
                     <div class="detailSectionContent">
                         <br />
                         <div>
@@ -30,11 +23,8 @@
                             <select id="selectAudioLanguage" data-mini="true"></select>
                         </div>
                         <br />
-                        <div data-role="controlgroup">
-                            <input type="checkbox" id="chkPlayDefaultAudioTrack" />
-                            <label for="chkPlayDefaultAudioTrack">${LabelPlayDefaultAudioTrack}</label>
-                        </div>
-                        <br />
+                        <paper-checkbox class="chkPlayDefaultAudioTrack">${LabelPlayDefaultAudioTrack}</paper-checkbox>
+                        <br /><br /><br />
                         <div>
                             <label for="selectSubtitleLanguage">${LabelSubtitleLanguagePreference}</label>
                             <select id="selectSubtitleLanguage" data-mini="true"></select>
@@ -57,31 +47,27 @@
 
                 </div>
                 <div class="detailSection cinemaModeOptions" style="display:none;">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderCinemaMode}<span style="color:#52B54B;margin-left:.5em;">*</span>
-                    </div>
+                    </h1>
                     <div class="detailSectionContent">
                         <br />
-                        <div data-role="controlgroup">
-                            <input type="checkbox" id="chkEnableCinemaMode" />
-                            <label for="chkEnableCinemaMode">${LabelEnableCinemaMode}</label>
-                        </div>
+                        <paper-checkbox class="chkEnableCinemaMode">${LabelEnableCinemaMode}</paper-checkbox>
 
-                        <div class="fieldDescription">${CinemaModeConfigurationHelp}</div>
+                        <div class="fieldDescription paperCheckboxFieldDescription">${CinemaModeConfigurationHelp}</div>
                     </div>
 
                 </div>
 
                 <div class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderAdvanced}
-                    </div>
+                    </h1>
                     <div class="detailSectionContent">
                         <br />
                         <div>
                             <label for="selectMaxBitrate">${LabelMaxStreamingBitrate}</label>
-                            <select id="selectMaxBitrate" data-mini="true">
-                            </select>
+                            <select id="selectMaxBitrate" data-mini="true"></select>
                         </div>
                         <br />
                         <div>
@@ -116,20 +102,17 @@
                         <div>
                             <br />
                             <div>
-                                <label for="chkEnableChromecastAc3">${LabelEnableChromecastAc3Passthrough}</label>
-                                <input type="checkbox" id="chkEnableChromecastAc3" data-mini="true" />
+                                <paper-checkbox class="chkEnableChromecastAc3">${LabelEnableChromecastAc3Passthrough}</paper-checkbox>
                             </div>
                         </div>
 
                         <br />
                         <div>
-                            <fieldset data-role="controlgroup">
-                                <legend>${LabelExternalPlayers}</legend>
-                                <input type="checkbox" id="chkExternalVideoPlayer" />
-                                <label for="chkExternalVideoPlayer">${OptionEnableExternalVideoPlayers}</label>
-                            </fieldset>
-                            <div style="padding: 0 2px;display:none;" class="labelGenericExternalPlayers">${LabelExternalPlayersHelp}</div>
-                            <div style="padding: 0 2px;display:none;" class="labelNativeExternalPlayers">${LabelNativeExternalPlayersHelp}</div>
+                            <paper-checkbox class="chkExternalVideoPlayer">${OptionEnableExternalVideoPlayers}</paper-checkbox>
+                            <div class="fieldDescription paperCheckboxFieldDescription">
+                                <div style="display:none;" class="labelGenericExternalPlayers">${LabelExternalPlayersHelp}</div>
+                                <div style="display:none;" class="labelNativeExternalPlayers">${LabelNativeExternalPlayersHelp}</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -138,8 +121,6 @@
                     <button type="submit" data-role="none" class="clearButton">
                         <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
                     </button>
-
-                    <paper-button raised class="cancel block btnCancel" onclick="history.back();"><iron-icon icon="close"></iron-icon><span>${ButtonCancel}</span></paper-button>
                 </div>
                 <p>
                     <span style="color:#52B54B;margin-left:.5em;margin-right:.5em;">*</span><span>${LegendTheseSettingsShared}</span>
