--- a/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
@@ -4,14 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="userImagePage" data-role="page" class="page libraryPage userPreferencesPage userPasswordPage" data-contextname="${HeaderSettings}" data-require="scripts/myprofile,scripts/mypreferencescommon,paperbuttonstyle,jqmicons">
-
-        <div class="libraryViewNav">
-            <a href="#" class="lnkDisplayPreferences">${TabDisplay}</a>
-            <a href="#" class="lnkHomeScreenPreferences">${TabHomeScreen}</a>
-            <a href="#" class="lnkLanguagePreferences">${TabPlayback}</a>
-            <a href="#" class="ui-btn-active lnkMyProfile">${TabProfile}</a>
-        </div>
+    <div id="userImagePage" data-role="page" class="page libraryPage userPreferencesPage userPasswordPage noSecondaryNavPage" data-title="${HeaderProfile}" data-require="scripts/myprofile,paperbuttonstyle,jqmicons" data-backbutton="true" data-menubutton="false">
 
         <div data-role="content">
             <br />
@@ -20,9 +13,8 @@
 
                 <div style="vertical-align:top;margin: .5em 0 0 1em;display:inline-block;">
                     <h2 class="username" style="margin: 0;"></h2>
-                    <button id="btnDeleteImage" type="button" data-icon="delete" style="display: none;margin-top:1em;">
-                        ${ButtonDeleteImage}
-                    </button>
+                    <br/>
+                    <paper-button raised class="cancel" id="btnDeleteImage"><iron-icon icon="delete"></iron-icon><span>${ButtonDeleteImage}</span></paper-button>
                 </div>
             </div>
 
@@ -59,24 +51,20 @@
             <form class="updatePasswordForm passwordSection userProfileSettingsForm" style="display:none;margin: 0 auto 2em;">
 
                 <div class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderPassword}
-                    </div>
+                    </h1>
                     <div class="detailSectionContent">
-                        <br />
                         <div id="fldCurrentPassword" style="display: none;">
-                            <label for="txtCurrentPassword">${LabelCurrentPassword}</label>
-                            <input type="password" id="txtCurrentPassword" name="txtCurrentPassword" />
+                            <paper-input type="password" id="txtCurrentPassword" label="${LabelCurrentPassword}" autocomplete="off"></paper-input>
                         </div>
                         <br />
                         <div>
-                            <label for="txtNewPassword">${LabelNewPassword}</label>
-                            <input type="password" id="txtNewPassword" name="txtNewPassword" />
+                            <paper-input type="password" id="txtNewPassword" label="${LabelNewPassword}" autocomplete="off"></paper-input>
                         </div>
                         <br />
                         <div>
-                            <label for="txtNewPasswordConfirm">${LabelNewPasswordConfirm}</label>
-                            <input type="password" id="txtNewPasswordConfirm" name="txtNewPasswordConfirm" />
+                            <paper-input type="password" id="txtNewPasswordConfirm" label="${LabelNewPasswordConfirm}" autocomplete="off"></paper-input>
                         </div>
                         <br />
                         <div>
@@ -92,24 +80,22 @@
             </form>
             <form class="localAccessForm localAccessSection userProfileSettingsForm" style="margin: 0 auto;">
                 <div class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderEasyPinCode}
-                    </div>
+                    </h1>
                     <div class="detailSectionContent">
                         <br />
                         <div>${EasyPasswordHelp}</div>
                         <br />
                         <div>
-                            <label for="txtEasyPassword">${LabelEasyPinCode}</label>
-                            <input type="password" id="txtEasyPassword" />
+                            <paper-input type="password" id="txtEasyPassword" label="${LabelEasyPinCode}" autocomplete="off"></paper-input>
                         </div>
                         <br />
                         <div>
-                            <label for="chkEnableLocalEasyPassword">${LabelInNetworkSignInWithEasyPassword}</label>
-                            <input type="checkbox" id="chkEnableLocalEasyPassword" />
-                            <div class="fieldDescription">${LabelInNetworkSignInWithEasyPasswordHelp}</div>
+                            <paper-checkbox class="chkEnableLocalEasyPassword">${LabelInNetworkSignInWithEasyPassword}</paper-checkbox>
+                            <div class="fieldDescription paperCheckboxFieldDescription">${LabelInNetworkSignInWithEasyPasswordHelp}</div>
                         </div>
-                        <br />
+                        <br /><br/>
                         <div>
                             <button type="submit" data-role="none" class="clearButton">
                                 <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
