--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
@@ -46,45 +46,41 @@
                 <div class="list">
                     <a href="#" class="clearLink lnkDisplayPreferences">
                         <paper-icon-item>
-                            <div class="avatar blue" item-icon></div>
+                            <paper-fab class="avatar blue" icon="tv" item-icon></paper-fab>
                             <paper-item-body two-line>
                                 <div>${ButtonDisplaySettings}</div>
                                 <div secondary>${ButtonDisplaySettingsHelp}</div>
                             </paper-item-body>
-                            <iron-icon icon="tv"></iron-icon>
                         </paper-icon-item>
                     </a>
 
                     <a href="#" class="clearLink lnkHomeScreenPreferences">
                         <paper-icon-item>
-                            <div class="avatar red" item-icon></div>
+                            <paper-fab class="avatar red" icon="home" item-icon></paper-fab>
                             <paper-item-body two-line>
                                 <div>${ButtonHomeScreenSettings}</div>
                                 <div secondary>${ButtonHomeScreenSettingsHelp}</div>
                             </paper-item-body>
-                            <iron-icon icon="home"></iron-icon>
                         </paper-icon-item>
                     </a>
 
                     <a href="#" class="clearLink lnkLanguagePreferences">
                         <paper-icon-item>
-                            <div class="avatar green" item-icon></div>
+                            <paper-fab class="avatar green" icon="play-circle-filled" item-icon></paper-fab>
                             <paper-item-body two-line>
                                 <div>${ButtonPlaybackSettings}</div>
                                 <div secondary>${ButtonPlaybackSettingsHelp}</div>
                             </paper-item-body>
-                            <iron-icon icon="play-circle-outline"></iron-icon>
                         </paper-icon-item>
                     </a>
 
                     <a href="#" class="clearLink lnkMyProfile">
                         <paper-icon-item>
-                            <div class="avatar orange" item-icon></div>
+                            <paper-fab class="avatar orange" icon="person" item-icon></paper-fab>
                             <paper-item-body two-line>
                                 <div>${ButtonProfile}</div>
                                 <div secondary>${ButtonProfileHelp}</div>
                             </paper-item-body>
-                            <iron-icon icon="person"></iron-icon>
                         </paper-icon-item>
                     </a>
                 </div>
